--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                             <div class="row d-flex justify-content-between align-items-center">
                                 <div class="header-info-left">
                                     <ul>     
-                                        <li><img src="assets/img/icon/header_icon1.png" alt="">34ºc, Sunny </li>
-                                        <li><img src="assets/img/icon/header_icon1.png" alt="">Tuesday, 18th June, 2019</li>
+                                        <li><img src="assets/img/icon/header_icon1.png" alt="">-3ºc, Sunny </li>
+                                        <li><img src="assets/img/icon/header_icon1.png" alt="">Friday, 21st February, 2025</li>
                                     </ul>
                                 </div>
                                 <div class="header-info-right">
