--- a/index.html
+++ b/index.html
@@ -35,6 +35,16 @@
 		</script>
    </head>
 
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-CBQZK4YHJK"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-CBQZK4YHJK');
+</script>
+
    <body>
        
     <!-- Preloader Start -->
