--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <div class="row d-flex justify-content-between align-items-center">
                                 <div class="header-info-left">
                                     <ul>     
-                                        <li><img src="assets/img/icon/header_icon1.png" alt="">-3ºc, Sunny </li>
+                                        <li><img src="assets/img/icon/header_icon1.png" alt="">-3ºc, Partly Cloudy </li>
                                         <li><img src="assets/img/icon/header_icon1.png" alt="">Friday, 21st February, 2025</li>
                                     </ul>
                                 </div>
