--- a/contact.html
+++ b/contact.html
@@ -55,6 +55,7 @@
     <header>
         <!-- Header Start -->
        <div class="header-area">
+	       <div class="main-header ">
                 <div class="header-mid d-none d-md-block">
                    <div class="container">
                         <div class="row d-flex align-items-center">
