--- a/about.html
+++ b/about.html
@@ -63,6 +63,7 @@
     <header>
         <!-- Header Start -->
        <div class="header-area">
+	       <div class="main-header ">
                 <div class="header-mid d-none d-md-block">
                    <div class="container">
                         <div class="row d-flex align-items-center">
